--- a/accordionDemo/index.html
+++ b/accordionDemo/index.html
@@ -11,8 +11,8 @@
     </style>
     <!-- css files -->
     <link rel="stylesheet" href="style.css">
-    <!--icons library-->
-    <link rel="stylesheet" href="icons/css/all.min.css">
+    <!-- icons library via CDN -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
 <body>
     <script src="main.js"></script>
